<?xml version="1.0"?>
<package format="3">
  <name>xl330_ros2_control</name>
  <version>0.0.1</version>
  <description>ROS 2 control interface for Dynamixel XL-330 with multi-joint support</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>dynamixel_sdk</depend>
  <depend>controller_interface</depend>
  <depend>ros2_control</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <export>
    <pluginlib plugin_manifest="xl330_hardware_interface_plugin.xml"/>
  </export>
</package>